--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Shop con Carrello</title>
+  <title>Shop CioccoPesce</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
     header { background: #333; color: white; padding: 1em; text-align: center; }
@@ -11,7 +11,7 @@
     .product { border: 1px solid #ccc; padding: 1em; width: 200px; text-align: center; }
     .product img { width: 100%; height: auto; }
     button { margin-top: 0.5em; padding: 0.5em 1em; }
-    #cart { padding: 1em; background: #f4f4f4; }
+    #cart { padding: 1em; background: #00FF00; }
   </style>
 </head>
 <body>
