--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
 <body>
 
 <header>
-  <h1>Simple Shop con Carrello</h1>
+  <h1>Shop CioccoPesce</h1>
 </header>
 
 <section class="products">
   <div class="product">
     <img src="https://via.placeholder.com/200" alt="Prodotto 1">
-    <h2>Prodotto 1</h2>
-    <p>$10.00</p>
-    <button onclick="addToCart('Prodotto 1', 10)">Aggiungi</button>
+    <h2>Maglia classica</h2>
+    <p>$20.00</p>
+    <button onclick="addToCart('Maglia classica', 20)">Aggiungi</button>
   </div>
   <div class="product">
     <img src="https://via.placeholder.com/200" alt="Prodotto 2">
-    <h2>Prodotto 2</h2>
-    <p>$15.00</p>
-    <button onclick="addToCart('Prodotto 2', 15)">Aggiungi</button>
+    <h2>Maglia nuova</h2>
+    <p>$22.00</p>
+    <button onclick="addToCart('Maglia nuova', 22)">Aggiungi</button>
   </div>
 </section>
 
