--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Shop CioccoPesce</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
-    header { background: #333; color: white; padding: 1em; text-align: center; }
+    header { background: #00FF00; color: #4B006E; padding: 1em; text-align: center; }
     .products { display: flex; flex-wrap: wrap; padding: 1em; gap: 1em; justify-content: center; }
     .product { border: 1px solid #ccc; padding: 1em; width: 200px; text-align: center; }
     .product img { width: 100%; height: auto; }
