--- a/index.html
+++ b/index.html
@@ -2,66 +2,64 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Pagina principale</title>
+  <title>Barra di Navigazione</title>
   <style>
     body {
+      margin: 0;
+      background-color: #fff0f5;
       font-family: 'Segoe UI', sans-serif;
-      text-align: center;
-      padding-top: 10px;
-      background-color: #b800c280;
     }
 
-    h1 {
-      margin-bottom: 40px;
-    }
+    .nav-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #31AC6A;
+  padding: 5px 130px;
+  gap: 50px;
 
-    .button-container {
-     display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: wrap;
-      gap: 40px;
-      margin-top: 40px;
-    }
+  /* Rounded and floating */
+  border-radius: 30px;
+  margin: 40px auto;
+  width: fit-content;s
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+}
 
-    .button {
-      background-color: #A006c180;
-      color: white;
-      border: none;
-      padding: 15px 30px;
-      border-radius: 30px;
-      font-size: 16px;
-      cursor: pointer;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+
+    .nav-item {
+      color: rgba(255, 255, 255, 0.6);
+      font-size: 18px;
+      font-weight: 500;
+      text-decoration: none;
       transition: all 0.3s ease;
+      cursor: pointer;
     }
 
-    .button:hover {
-      background-color: #008F00A0;
-      transform: scale(1.05);
+    .nav-item:hover {
+      color: rgba(255, 255, 255, 1);
+      transform: scale(1.1);
     }
+
     .center-image {
-      width: 120px;
-      height: 50px;
+      width: 100px;
+      height: 40px;
       justify-content: center;
       align-items: center;
-      gap: 20px;
+      gap: 10px;
       object-fit: cover;  /* Keeps it nicely cropped */
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
       vertical-align: middle;
     }
-
-
   </style>
 </head>
 <body>
-  <div class="main-container">
-      <button class="button" onclick="window.location.href='shop.html'">Shop</button>
-      <button class="button" onclick="window.location.href='skate.html'">Skate</button>
-     <img src="cp.jpg" alt="Cioccopesce" class="center-image">
-      <button class="button" onclick="window.location.href='contatti.html'">Contatti</button>
-      <button class="button" onclick="window.location.href='chi siamo.html'">Chi siamo</button>
-    </div>
+
+  <div class="nav-bar">
+    <div class="nav-item" onclick="window.location.href='shop.html'">Shop</div>
+    <div class="nav-item" onclick="window.location.href='skate.html'">Chi siamo</div>
+    <img src="output-onlinepngtools (1).png" alt="Logo" class="center-image ">
+    <div class="nav-item" onclick="window.location.href='contatti.html'">Servizi</div>
+    <div class="nav-item" onclick="window.location.href='chi siamo.html'">Contatti</div>
   </div>
+
 </body>
 </html>
