--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div class="nav-bar">
     <div class="nav-item" onclick="window.location.href='shop.html'">Shop</div>
     <div class="nav-item" onclick="window.location.href='skate.html'">Chi siamo</div>
-    <img src="output-onlinepngtools (1).png" alt="Logo" class="center-image ">
+    <img src="Cioccosparente.png" alt="Logo" class="center-image ">
     <div class="nav-item" onclick="window.location.href='contatti.html'">Servizi</div>
     <div class="nav-item" onclick="window.location.href='chi siamo.html'">Contatti</div>
   </div>
