--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #31AC6A;
-  padding: 5px 130px;
+  background-color: #4F2980;
+  padding: 5px 100px;
   gap: 50px;
 
   /* Rounded and floating */
@@ -36,17 +36,17 @@
     }
 
     .nav-item:hover {
-      color: rgba(255, 255, 255, 1);
+      color: rgba(255, 255W, 255, 1);
       transform: scale(1.1);
     }
-
     .center-image {
-      width: 100px;
-      height: 40px;
+      width: 60px;
+      height: 30px;
       justify-content: center;
       align-items: center;
       gap: 10px;
-      object-fit: cover;  /* Keeps it nicely cropped */
+      object-fit: contain;
+
       vertical-align: middle;
     }
   </style>
@@ -56,7 +56,7 @@
   <div class="nav-bar">
     <div class="nav-item" onclick="window.location.href='shop.html'">Shop</div>
     <div class="nav-item" onclick="window.location.href='skate.html'">Chi siamo</div>
-    <img src="Cioccosparente.png" alt="Logo" class="center-image ">
+    <img src="Cioccosparente bianco.png" alt="Logo" class="center-image ">
     <div class="nav-item" onclick="window.location.href='contatti.html'">Servizi</div>
     <div class="nav-item" onclick="window.location.href='chi siamo.html'">Contatti</div>
   </div>
