--- a/index.html
+++ b/index.html
@@ -15,16 +15,15 @@
   justify-content: center;
   align-items: center;
   background-color: #4F2980;
-  padding: 5px 100px;
+  padding: 5px 50px;
   gap: 50px;
 
   /* Rounded and floating */
-  border-radius: 30px;
+  border-radius: 20px;
   margin: 40px auto;
   width: fit-content;s
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
 }
-
 
     .nav-item {
       color: rgba(255, 255, 255, 0.6);
@@ -36,7 +35,7 @@
     }
 
     .nav-item:hover {
-      color: rgba(255, 255W, 255, 1);
+      color: rgba(255, 255, 255, 1);
       transform: scale(1.1);
     }
     .center-image {
@@ -57,7 +56,7 @@
     <div class="nav-item" onclick="window.location.href='shop.html'">Shop</div>
     <div class="nav-item" onclick="window.location.href='skate.html'">Chi siamo</div>
     <img src="Cioccosparente bianco.png" alt="Logo" class="center-image ">
-    <div class="nav-item" onclick="window.location.href='contatti.html'">Servizi</div>
+    <div class="nav-item" onclick="window.location.href='contatti.html'">Skate</div>
     <div class="nav-item" onclick="window.location.href='chi siamo.html'">Contatti</div>
   </div>
 
